@@ -1,21 +1,27 @@
 package com.ustudy.exam.utility;
 
-import java.io.IOException;
 import java.math.BigInteger;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.Base64;
+
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+
+import com.ustudy.exam.service.impl.ClientServiceImpl;
 
 public class Base64Util {
+	
+	private static final Logger logger = LogManager.getLogger(ClientServiceImpl.class);
 
 	/** 
 	 * 编码
      * @param token 
      * @return 
      */  
-    @SuppressWarnings("restriction")
 	public static String decode(final String token) {  
-    	return new sun.misc.BASE64Encoder().encode(token.getBytes());    
-    }  
+    	return new String(Base64.getEncoder().encode(token.getBytes()));
+    }
   
     /** 
      * 二进制数据编码为BASE64字符串 
@@ -24,30 +30,38 @@ public class Base64Util {
      * @return 
      * @throws Exception 
      */  
-    @SuppressWarnings("restriction")
-    public static String encode(final String token) {  
-    	byte[] bt = null;    
-	   try {    
-		sun.misc.BASE64Decoder decoder = new sun.misc.BASE64Decoder();    
-	       bt = decoder.decodeBuffer(token);    
-	   } catch (IOException e) {    
-	       e.printStackTrace();    
-	   }
-	   return new String(bt);
-    }  
-    
+    public static String encode(final String token) {    	
+    	if(null != token) {
+    		byte[] bt = null;
+    		try {
+    			Base64.Decoder decoder = Base64.getDecoder();
+    			bt = decoder.decode(token);
+    		} catch (Exception e) {
+    			logger.error(e.getMessage());
+    			e.printStackTrace();
+    		}
+    		return new String(bt);
+    	}else {
+    		logger.error("token is null ...");
+			return null;
+		}
+    }
+
     /** 
 	 * md5加密
      * @param password 
      * @return 
      */  
 	public static String getMd5Pwd(final String password) {
-		try {
-			MessageDigest md = MessageDigest.getInstance("MD5");
-			md.update(password.getBytes(), 0, password.length());
-			return String.format("%032x", new BigInteger(1, md.digest()));    
-		} catch (NoSuchAlgorithmException e) {
-			e.printStackTrace();
+		if(null != password) {
+			try {
+				MessageDigest md = MessageDigest.getInstance("MD5");
+				md.update(password.getBytes(), 0, password.length());
+				return String.format("%032x", new BigInteger(1, md.digest()));    
+			} catch (NoSuchAlgorithmException e) {
+				logger.error(e.getMessage());
+				e.printStackTrace();
+			}
 		}
 		return null;
     }  
